--- a/pt1.html
+++ b/pt1.html
@@ -13,7 +13,7 @@
                 width: 480px;
                 height: 300px;
                 overflow: hidden;
-                position:absolute;
+                position: relative;
             }
             #scene {
             }
